--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,6 +1,13 @@
+:root{
+    --footer-bg: linear-gradient(90deg, #cfecd0, #a0cea7, #9ec0db);
+     
+}
+
 .footer_outer {
     display: flex;
     /* ЗДЕСЬ ВЫСОТА НАРУЖКИ*/
     height: 100px;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
+    background: var(--footer-bg);
+    
 }
