--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,10 +4,12 @@
 }
 
 .footer_outer {
-    display: flex;
+    
     /* ЗДЕСЬ ВЫСОТА НАРУЖКИ*/
     height: 100px;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
     background: var(--footer-bg);
+    width: 100%;
     
+    bottom: 0;
 }
