--- a/src/components/UI/nav/MyLinkList.module.css
+++ b/src/components/UI/nav/MyLinkList.module.css
@@ -14,3 +14,9 @@
 
     }
   }
+  a.text:active, /* активная/посещенная ссылка */
+  a.text:hover,  /* при наведении */
+  a.text {
+    text-decoration: none;
+    color: #666;
+  }
