--- a/src/components/UI/other/Login.module.css
+++ b/src/components/UI/other/Login.module.css
@@ -2,18 +2,12 @@
 .login{
     display: flex;
     flex-direction: column;
-    
-    
-    
-    
-
-
-    
+        
     
 }
 .login > input
 {
-    margin: 0 0 10px;
+    margin: 10px 0 10px;
     font-family: 'Raleway', sans-serif;
     font-size: large;
     display: block;
@@ -49,10 +43,4 @@
     background-color: #f5f5f5;
     opacity: 1;
   }
-.login > label{
-    font-family: 'Raleway', sans-serif;
-    
-    font-size: larger;
-    margin-bottom: 0.5rem;
-    margin-top: 2rem;
-}
+
