--- a/src/css/Root.css
+++ b/src/css/Root.css
@@ -1,3 +1,4 @@
+
 body{
     min-height: 100vh;
     display: flex;
@@ -14,3 +15,11 @@ a.ssilka {
     
     min-height: 100vh;
 }
+
+
+
+  @font-face {
+    font-family: Raleway;
+    src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;900&display=swap');
+    font-weight: 20;
+  }
