--- a/src/components/UI/notlogin/JoinLogin.module.css
+++ b/src/components/UI/notlogin/JoinLogin.module.css
@@ -40,6 +40,7 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease-in;
+
     
 }
 .logincontent{
@@ -51,6 +52,11 @@
     transform: scale(0);
     border-radius: 10%;
     border: 10px solid gray;
+
+    display: flex;
+    flex: 0;
+
+
 }
 
 .logincontent.active{
@@ -59,7 +65,7 @@
 }
 .loginform.active{
     pointer-events: all;
-    
+    overflow-y: hidden;
 
     opacity: 1;
     transition: opacity 0.3s ease-in;
