--- a/src/components/UI/other/Login.module.css
+++ b/src/components/UI/other/Login.module.css
@@ -2,17 +2,23 @@
 .login{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    flex: 1;
+
+    
+    
         
     
 }
 .login > input
 {
-    margin: 10px 0 10px;
-    font-family: 'Raleway', sans-serif;
-    font-size: large;
-    display: block;
+  margin: 10px 0 10px;
+  font-family: 'Raleway', sans-serif;
+  font-size: large;
+  display: block;
   width: 100%;
   height: calc(2.25rem + 2px);
+  
   
   
   font-size: 1rem;
@@ -24,6 +30,12 @@
   border: 1px solid #bdbdbd;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+button{
+  width: 30%;
+  margin-top: 2vh;
+  
+
 }
 .login > input::placeholder {
     color: #212529;
@@ -43,4 +55,18 @@
     background-color: #f5f5f5;
     opacity: 1;
   }
+  .headerlogin{
+    margin-bottom: 1.5vh;
+    flex: 1;
+  }
+  .title {
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .username{
+    position: relative;
+  }
+  
+  
 
